updates style of text-box to prevent bad contrast, updates landing page to be more aligned. fixes the footer and footer line-height

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -47,7 +47,7 @@ footer {
 
         li {
           display: block;
-          margin-bottom: $lh * .5;
+          margin-bottom: $lh * .2;
         }
       }
     }
